--- a/style.css
+++ b/style.css
@@ -19,10 +19,6 @@ h2 {
   font-size: 15px;
 }
 
-body {
-  margin: 0px;
-}
-
 header {
   position: fixed;
   top: 0px;
@@ -101,12 +97,11 @@ footer {
 
 #music {
   position: fixed;
-  bottom: 40px;
-  right: 3px;
+  bottom: 0px;
+  left: 3px;
 }
 
 .top {
-  float: right;
   position: sticky;
   bottom: 70px;
   margin-top: 100vh;
